--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "swyft-functions",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SwyftPain/easyembed.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "SwyftPain",
   "license": "ISC"
 }
