--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swyft-functions",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -14,5 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "sp-easyembed": "^1.1.1"
+  },
+  "devDependencies": {
+    "sp-easy-embed": "^1.1.1"
   }
 }
